# straticor

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: Makefile  conf.py  example.ipynb  make.bat
notebooks/: alborada_1.ipynb  draw_section.ipynb  fake_columns.ipynb  fix_frequency.ipynb  la_amarilla_1.ipynb  quebrada_santa_lucia.ipynb  test_section.ipynb
src/straticor/: __init__.py  dtw.py  plot.py  straticor.py  utils.py
tests/: test_straticor.py
