[tool.poetry]
name = "straticor"
version = "0.0.1"
description = "Correlate stratigraphic columns"
authors = ["Sebástian Narváez"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.25.2"
matplotlib = "^3.7.3"
scipy = "^1.11.2"
dtaidistance = {git = "https://github.com/wannesm/dtaidistance.git"}
pandas = "^2.1.0"
openpyxl = "^3.1.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
